--- a/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
+++ b/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
@@ -9,76 +9,386 @@ date: 2025-08-04
 import GiscusComments from "@site/src/components/GiscusComments";
 import Newsletter from "@site/src/components/Newsletter";
 
+<div style={{
+  background: 'linear-gradient(135deg, #0f0f23 0%, #1a1a3a 50%, #0a0a18 100%)',
+  borderRadius: '24px',
+  padding: '4rem 2rem',
+  margin: '2rem 0',
+  position: 'relative',
+  overflow: 'hidden',
+  border: '1px solid rgba(99, 102, 241, 0.2)',
+  textAlign: 'center'
+}}>
+  <div style={{
+    position: 'absolute',
+    top: 0,
+    left: 0,
+    right: 0,
+    bottom: 0,
+    background: 'radial-gradient(circle at 30% 20%, rgba(99, 102, 241, 0.15) 0%, transparent 50%), radial-gradient(circle at 70% 80%, rgba(236, 72, 153, 0.1) 0%, transparent 50%)',
+    pointerEvents: 'none'
+  }}></div>
+  
+  <h1 style={{
+    fontSize: 'clamp(2.5rem, 6vw, 4rem)',
+    fontWeight: 800,
+    background: 'linear-gradient(135deg, #6366f1, #ec4899, #06b6d4)',
+    WebkitBackgroundClip: 'text',
+    backgroundClip: 'text',
+    WebkitTextFillColor: 'transparent',
+    lineHeight: 1.2,
+    marginBottom: '1.5rem',
+    position: 'relative',
+    zIndex: 2
+  }}>
+    🏥 Reducing Emergency Room Wait Times with Systems Engineering and AI
+  </h1>
+  
+  <p style={{
+    fontSize: '1.5rem',
+    color: '#a1a1aa',
+    marginBottom: '2rem',
+    position: 'relative',
+    zIndex: 2
+  }}>
+    A rare look at how systems engineering, AI, and operations research optimize critical healthcare delivery
+  </p>
+</div>
 
-# 🏥 Reducing Emergency Room Wait Times with Systems Engineering and AI
+<div style={{
+  display: 'grid',
+  gridTemplateColumns: 'repeat(auto-fit, minmax(200px, 1fr))',
+  gap: '1.5rem',
+  margin: '3rem 0'
+}}>
+  <div style={{
+    background: 'rgba(255, 255, 255, 0.05)',
+    backdropFilter: 'blur(10px)',
+    border: '1px solid rgba(255, 255, 255, 0.1)',
+    borderRadius: '16px',
+    padding: '2rem',
+    textAlign: 'center',
+    transition: 'all 0.3s ease'
+  }}>
+    <span style={{
+      fontSize: '2.5rem',
+      fontWeight: 800,
+      color: '#6366f1',
+      display: 'block',
+      marginBottom: '0.5rem'
+    }}>50%</span>
+    <span style={{
+      color: '#a1a1aa',
+      fontWeight: 500
+    }}>Wait Time Reduction</span>
+  </div>
+  
+  <div style={{
+    background: 'rgba(255, 255, 255, 0.05)',
+    backdropFilter: 'blur(10px)',
+    border: '1px solid rgba(255, 255, 255, 0.1)',
+    borderRadius: '16px',
+    padding: '2rem',
+    textAlign: 'center',
+    transition: 'all 0.3s ease'
+  }}>
+    <span style={{
+      fontSize: '2.5rem',
+      fontWeight: 800,
+      color: '#ec4899',
+      display: 'block',
+      marginBottom: '0.5rem'
+    }}>6</span>
+    <span style={{
+      color: '#a1a1aa',
+      fontWeight: 500
+    }}>Disciplines Combined</span>
+  </div>
+  
+  <div style={{
+    background: 'rgba(255, 255, 255, 0.05)',
+    backdropFilter: 'blur(10px)',
+    border: '1px solid rgba(255, 255, 255, 0.1)',
+    borderRadius: '16px',
+    padding: '2rem',
+    textAlign: 'center',
+    transition: 'all 0.3s ease'
+  }}>
+    <span style={{
+      fontSize: '2.5rem',
+      fontWeight: 800,
+      color: '#06b6d4',
+      display: 'block',
+      marginBottom: '0.5rem'
+    }}>24/7</span>
+    <span style={{
+      color: '#a1a1aa',
+      fontWeight: 500
+    }}>System Operation</span>
+  </div>
+  
+  <div style={{
+    background: 'rgba(255, 255, 255, 0.05)',
+    backdropFilter: 'blur(10px)',
+    border: '1px solid rgba(255, 255, 255, 0.1)',
+    borderRadius: '16px',
+    padding: '2rem',
+    textAlign: 'center',
+    transition: 'all 0.3s ease'
+  }}>
+    <span style={{
+      fontSize: '2.5rem',
+      fontWeight: 800,
+      color: '#f59e0b',
+      display: 'block',
+      marginBottom: '0.5rem'
+    }}>Real</span>
+    <span style={{
+      color: '#a1a1aa',
+      fontWeight: 500
+    }}>Hospital Impact</span>
+  </div>
+</div>
 
-Emergency departments (EDs) across the world face a growing crisis: long patient wait times, overcrowding, and inefficient triage systems. But this isn’t just a healthcare issue — it’s a complex systems problem.
+Emergency departments (EDs) across the world face a growing crisis: long patient wait times, overcrowding, and inefficient triage systems. But this isn't just a healthcare issue — it's a complex systems problem.
 
-> **This post is based on a real-life consulting project** I completed. To protect confidentiality, I’ve redacted sensitive details and translated it into a publicly shareable learning format.
+<div style={{
+  background: 'linear-gradient(135deg, rgba(6, 182, 212, 0.1), rgba(99, 102, 241, 0.1))',
+  borderLeft: '4px solid #06b6d4',
+  borderRadius: '0 16px 16px 0',
+  padding: '2rem',
+  margin: '2rem 0',
+  position: 'relative',
+  overflow: 'hidden'
+}}>
+  <strong>This post is based on a real-life consulting project</strong> I completed. To protect confidentiality, I've redacted sensitive details and translated it into a publicly shareable learning format.
+</div>
 
-It’s a rare look at how **systems engineering**, **AI**, and **operations research** can be used together to optimize one of the most critical service delivery environments in society.
+It's a rare look at how **systems engineering**, **AI**, and **operations research** can be used together to optimize one of the most critical service delivery environments in society.
 
 ---
 
 ## 🧠 The Multidisciplinary Framework
 
-This project combines:
+<div style={{
+  display: 'grid',
+  gridTemplateColumns: 'repeat(auto-fit, minmax(250px, 1fr))',
+  gap: '2rem',
+  margin: '3rem 0'
+}}>
+  <div style={{
+    background: 'linear-gradient(135deg, rgba(99, 102, 241, 0.1), rgba(236, 72, 153, 0.1))',
+    border: '1px solid rgba(99, 102, 241, 0.2)',
+    borderRadius: '20px',
+    padding: '2rem',
+    transition: 'all 0.3s ease',
+    textAlign: 'center'
+  }}>
+    <div style={{ fontSize: '3rem', marginBottom: '1rem' }}>⚙️</div>
+    <h3 style={{ marginBottom: '1rem', color: '#6366f1' }}>Systems Engineering</h3>
+    <p style={{ color: '#a1a1aa' }}>Holistic system design and optimization</p>
+  </div>
+  
+  <div style={{
+    background: 'linear-gradient(135deg, rgba(236, 72, 153, 0.1), rgba(6, 182, 212, 0.1))',
+    border: '1px solid rgba(236, 72, 153, 0.2)',
+    borderRadius: '20px',
+    padding: '2rem',
+    transition: 'all 0.3s ease',
+    textAlign: 'center'
+  }}>
+    <div style={{ fontSize: '3rem', marginBottom: '1rem' }}>📊</div>
+    <h3 style={{ marginBottom: '1rem', color: '#ec4899' }}>Operations Research</h3>
+    <p style={{ color: '#a1a1aa' }}>Mathematical modeling and simulation</p>
+  </div>
+  
+  <div style={{
+    background: 'linear-gradient(135deg, rgba(6, 182, 212, 0.1), rgba(245, 158, 11, 0.1))',
+    border: '1px solid rgba(6, 182, 212, 0.2)',
+    borderRadius: '20px',
+    padding: '2rem',
+    transition: 'all 0.3s ease',
+    textAlign: 'center'
+  }}>
+    <div style={{ fontSize: '3rem', marginBottom: '1rem' }}>🤖</div>
+    <h3 style={{ marginBottom: '1rem', color: '#06b6d4' }}>Artificial Intelligence</h3>
+    <p style={{ color: '#a1a1aa' }}>Predictive analytics and machine learning</p>
+  </div>
+  
+  <div style={{
+    background: 'linear-gradient(135deg, rgba(245, 158, 11, 0.1), rgba(99, 102, 241, 0.1))',
+    border: '1px solid rgba(245, 158, 11, 0.2)',
+    borderRadius: '20px',
+    padding: '2rem',
+    transition: 'all 0.3s ease',
+    textAlign: 'center'
+  }}>
+    <div style={{ fontSize: '3rem', marginBottom: '1rem' }}>🎯</div>
+    <h3 style={{ marginBottom: '1rem', color: '#f59e0b' }}>Strategic Design</h3>
+    <p style={{ color: '#a1a1aa' }}>Business process optimization</p>
+  </div>
+</div>
 
-- ✅ Systems Engineering
-- ✅ Operations Research
-- ✅ Artificial Intelligence / Machine Learning
-- ✅ Strategic Business Design
-
-The goal?  
+**The goal?**  
 To redesign and optimize an emergency care unit using data-driven modeling, predictive analytics, and systems-level thinking.
 
 ---
 
 ## 🔄 Project Overview (High-Level Steps)
 
-### 1. **Problem Definition**
-- Define the ER system boundary: Walk-in → Triage → Treatment → Discharge
-- Identify stakeholders (nurses, patients, doctors, admin)
-- Set measurable KPIs: Average wait time, LOS, staff utilization, % seen within 15 minutes
-
-### 2. **Process Mapping**
-- Visualize the current process using swimlane diagrams and SIPOC models
-- Conduct a bottleneck analysis using simulated time-motion estimates
-
-### 3. **Operations Research Modeling**
-- Model patient flow using queuing theory (M/M/s)
-- Simulate triage-to-treatment capacity using discrete-event simulation (SimPy / KNIME)
-- Run what-if analyses for staffing levels, fast-track lanes, or layout changes
-
-### 4. **Machine Learning Forecasting**
-- Use historical patient data to predict hourly demand surges
-- Build classification/regression models (XGBoost, Random Forest)
-- Add explainability with SHAP values for stakeholder trust
-
-### 5. **System Redesign & Optimization**
-- Implement AI-powered triage predictions
-- Simulate the proposed redesign to test KPI improvement
-- Analyze cost-benefit of staff reallocation or architectural layout changes
-
-### 6. **Strategic Communication**
-- Create executive dashboards and reports
-- Present system impact with visualized KPIs
-- Deliver an implementation roadmap to hospital leadership
+<div style={{ margin: '4rem 0' }}>
+  {[
+    {
+      number: 1,
+      title: "Problem Definition",
+      items: [
+        "Define the ER system boundary: Walk-in → Triage → Treatment → Discharge",
+        "Identify stakeholders (nurses, patients, doctors, admin)",
+        "Set measurable KPIs: Average wait time, LOS, staff utilization, % seen within 15 minutes"
+      ]
+    },
+    {
+      number: 2,
+      title: "Process Mapping",
+      items: [
+        "Visualize the current process using swimlane diagrams and SIPOC models",
+        "Conduct a bottleneck analysis using simulated time-motion estimates"
+      ]
+    },
+    {
+      number: 3,
+      title: "Operations Research Modeling",
+      items: [
+        "Model patient flow using queuing theory (M/M/s)",
+        "Simulate triage-to-treatment capacity using discrete-event simulation (SimPy / KNIME)",
+        "Run what-if analyses for staffing levels, fast-track lanes, or layout changes"
+      ]
+    },
+    {
+      number: 4,
+      title: "Machine Learning Forecasting",
+      items: [
+        "Use historical patient data to predict hourly demand surges",
+        "Build classification/regression models (XGBoost, Random Forest)",
+        "Add explainability with SHAP values for stakeholder trust"
+      ]
+    },
+    {
+      number: 5,
+      title: "System Redesign & Optimization",
+      items: [
+        "Implement AI-powered triage predictions",
+        "Simulate the proposed redesign to test KPI improvement",
+        "Analyze cost-benefit of staff reallocation or architectural layout changes"
+      ]
+    },
+    {
+      number: 6,
+      title: "Strategic Communication",
+      items: [
+        "Create executive dashboards and reports",
+        "Present system impact with visualized KPIs",
+        "Deliver an implementation roadmap to hospital leadership"
+      ]
+    }
+  ].map((step, index) => (
+    <div key={index} style={{
+      display: 'flex',
+      marginBottom: '3rem',
+      alignItems: 'flex-start'
+    }}>
+      <div style={{
+        width: '60px',
+        height: '60px',
+        background: `linear-gradient(135deg, ${index % 2 === 0 ? '#6366f1, #ec4899' : '#ec4899, #06b6d4'})`,
+        borderRadius: '50%',
+        display: 'flex',
+        alignItems: 'center',
+        justifyContent: 'center',
+        fontWeight: 'bold',
+        fontSize: '1.2rem',
+        marginRight: '2rem',
+        flexShrink: 0,
+        color: 'white'
+      }}>
+        {step.number}
+      </div>
+      <div style={{
+        background: 'rgba(255, 255, 255, 0.05)',
+        backdropFilter: 'blur(10px)',
+        border: '1px solid rgba(255, 255, 255, 0.1)',
+        borderRadius: '16px',
+        padding: '2rem',
+        flex: 1
+      }}>
+        <h3 style={{ marginBottom: '1rem', color: '#6366f1' }}>{step.title}</h3>
+        <ul style={{ margin: 0, paddingLeft: '1rem' }}>
+          {step.items.map((item, itemIndex) => (
+            <li key={itemIndex} style={{ marginBottom: '0.5rem', color: '#a1a1aa' }}>{item}</li>
+          ))}
+        </ul>
+      </div>
+    </div>
+  ))}
+</div>
 
 ---
 
 ## 🛠️ Tools Used
 
-| Type | Tools |
-|------|-------|
-| Modeling & Simulation | **SimPy**, **KNIME**, Excel |
-| Machine Learning | **scikit-learn**, XGBoost, SHAP |
-| Optimization | **PuLP**, Google OR-Tools |
-| Visualization | **Power BI**, Streamlit, Tableau |
-| Mapping & Diagrams | **Lucidchart**, draw.io, Miro |
-| Documentation | **Notion**, Overleaf, Google Docs |
----
+<div style={{
+  background: 'rgba(255, 255, 255, 0.02)',
+  border: '1px solid rgba(255, 255, 255, 0.1)',
+  borderRadius: '16px',
+  overflow: 'hidden',
+  margin: '2rem 0'
+}}>
+  <table style={{ width: '100%', borderCollapse: 'collapse' }}>
+    <thead>
+      <tr>
+        <th style={{
+          background: 'linear-gradient(135deg, #6366f1, #ec4899)',
+          color: 'white',
+          padding: '1.5rem',
+          textAlign: 'left',
+          fontWeight: 600
+        }}>Type</th>
+        <th style={{
+          background: 'linear-gradient(135deg, #6366f1, #ec4899)',
+          color: 'white',
+          padding: '1.5rem',
+          textAlign: 'left',
+          fontWeight: 600
+        }}>Tools</th>
+      </tr>
+    </thead>
+    <tbody>
+      {[
+        ["Modeling & Simulation", "SimPy, KNIME, Excel"],
+        ["Machine Learning", "scikit-learn, XGBoost, SHAP"],
+        ["Optimization", "PuLP, Google OR-Tools"],
+        ["Visualization", "Power BI, Streamlit, Tableau"],
+        ["Mapping & Diagrams", "Lucidchart, draw.io, Miro"],
+        ["Documentation", "Notion, Overleaf, Google Docs"]
+      ].map(([type, tools], index) => (
+        <tr key={index}>
+          <td style={{
+            padding: '1.5rem',
+            borderBottom: '1px solid rgba(255, 255, 255, 0.05)',
+            fontWeight: 'bold'
+          }}>{type}</td>
+          <td style={{
+            padding: '1.5rem',
+            borderBottom: '1px solid rgba(255, 255, 255, 0.05)',
+            color: '#a1a1aa'
+          }}>{tools}</td>
+        </tr>
+      ))}
+    </tbody>
+  </table>
+</div>
 
+---
 
 ## 🔍 Why This Project Matters
 
@@ -92,22 +402,68 @@ By bringing together engineering, analytics, and empathy, this project delivered
 
 ---
 
-## 🚧 Want to Learn How to Build This?
+<div style={{
+  background: 'linear-gradient(135deg, #6366f1, #ec4899, #06b6d4)',
+  borderRadius: '24px',
+  padding: '4rem 2rem',
+  textAlign: 'center',
+  margin: '4rem 0',
+  position: 'relative',
+  overflow: 'hidden'
+}}>
+  <div style={{
+    position: 'absolute',
+    top: 0,
+    left: 0,
+    right: 0,
+    bottom: 0,
+    background: 'rgba(0, 0, 0, 0.3)',
+    backdropFilter: 'blur(10px)'
+  }}></div>
+  
+  <div style={{ position: 'relative', zIndex: 2 }}>
+    <h2 style={{
+      fontSize: '2.5rem',
+      fontWeight: 800,
+      marginBottom: '1rem',
+      textShadow: '0 2px 4px rgba(0, 0, 0, 0.3)',
+      color: 'white'
+    }}>🚧 Want to Learn How to Build This?</h2>
+    <p style={{
+      fontSize: '1.2rem',
+      marginBottom: '2rem',
+      color: 'rgba(255, 255, 255, 0.9)'
+    }}>I've documented the full technical and strategic breakdown in the <strong>Tutorials section</strong> of this blog.</p>
+  </div>
+</div>
 
-## 🚧 Want to Learn How to Build This?
+<div style={{
+  background: 'linear-gradient(135deg, rgba(251, 191, 36, 0.1), rgba(245, 158, 11, 0.1))',
+  border: '1px solid rgba(251, 191, 36, 0.3)',
+  borderRadius: '16px',
+  padding: '2rem',
+  margin: '2rem 0',
+  position: 'relative'
+}}>
+  <div style={{
+    fontSize: '1.5rem',
+    position: 'absolute',
+    top: '1rem',
+    left: '1rem'
+  }}>⚠️</div>
+  
+  <div style={{ marginLeft: '3rem' }}>
+    <strong>Privacy Notice:</strong> Since this was a real healthcare consulting project, some code snippets, data samples, and specific methodologies have been redacted or generalized to protect client confidentiality and comply with healthcare privacy regulations. The core techniques and frameworks remain intact for learning purposes.
+  </div>
+</div>
 
-I've documented the full technical and strategic breakdown in the **Tutorials section** of this blog.
-
-> **⚠️ Privacy Notice:** Since this was a real healthcare consulting project, some code snippets, data samples, and specific methodologies have been redacted or generalized to protect client confidentiality and comply with healthcare privacy regulations. The core techniques and frameworks remain intact for learning purposes.
-
-It includes:
+**It includes:**
 - System maps
 - Simulation templates  
 - Sample ML workflows in KNIME + Python
 - KPIs and reporting frameworks
 
 ---
-
 
 ## 💬 Comments
 
